--- a/Chat/app/src/main/res/values/colors.xml
+++ b/Chat/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimaryDark">#226e6e</color>
     <color name="colorPrimary">#3eaeae</color>
+    <color name="colorAccent">#226e6e</color>
 </resources>
