--- a/Chat/app/src/main/res/layout/activity_login.xml
+++ b/Chat/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,18 @@
             android:background="@color/colorPrimaryDark"
             android:layout_marginTop="10dp"
             android:textColor="@color/white"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Forgot password"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="end"
+            android:textStyle="bold"
+            android:id="@+id/forgot_password"
+            android:textColor="@color/colorPrimaryDark"
+            />
     </LinearLayout>
 
 </RelativeLayout>
