--- a/Chat/app/src/main/res/layout/user_item.xml
+++ b/Chat/app/src/main/res/layout/user_item.xml
@@ -51,4 +51,15 @@
         android:layout_toRightOf="@id/profile_image"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/username"
+        android:layout_toRightOf="@id/profile_image"
+        android:layout_marginTop="20dp"
+        android:id="@+id/last_msg"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginLeft="20dp"
+        android:maxLines="1"/>
+
 </RelativeLayout>
